fix description bug on mobile

--- a/src/components/ProjectsGallery/Project/Description/index.module.css
+++ b/src/components/ProjectsGallery/Project/Description/index.module.css
@@ -72,7 +72,7 @@ ol {
 
 @media (max-width: 1100px) {
   .container {
-    padding: 5% 0;
+    padding: 5% 0 15% 0;
   }
   
   .url-container {
